# gitfix

./: .gitignore  CMakeLists.txt  Readme.md  generate_sources.py  generate_subcommands.py  makefile
.devcontainer/: Dockerfile  devcontainer.json
include/: commands_list.h  matrix.h
src/: main.cpp
tests/: sanity_test.cpp
